--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@
 
 body {
   display: flex;
-  background-color: rgb(14, 168, 229);
+  background-image: url('../img/bg-default.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -15,10 +18,12 @@ body {
   display: none;
 }
 .container {
-  background-color: #0351d8;
+  border: rgba(255, 255, 255, 0.3);
+  background: rgb(255, 255, 255, 0.2);
   box-shadow: rgba(0, 0, 0.24) 0px 3px 8px;
+  opacity: 2;
   padding: 2rem;
-  color: #fdfdfd;
+  color: #fff;
   border-radius: 1rem;
 }
 
@@ -42,33 +47,37 @@ body {
   padding: 0.8rem;
   min-width: 50px;
   margin-left: 8px;
-  background-color: #097fe0;
+  background-color: black;
   color: #fdfdfd;
   cursor: pointer;
   border: none;
   border-radius: 4px;
+  transition: 0.5s;
+}
+.form button:hover{
+  background-color: rgb(243, 191, 3);
 }
 
 /* Clima */
-.weather-data {
+#weather-data {
   border-top: 1px solid #fff;
   margin-top: 1.5rem;
   padding-top: 1.5rem;
   text-align: center;
 }
 
-.weather-data h2{
+#weather-data h2{
     display: flex;
     justify-content: center;
     align-items: center; 
     margin-bottom: 0.6rem;
 }
 
-.weather-data h2 i{
+#weather-data h2 i{
     font-size: 1rem;
 }
 
-.weather-data span{
+#weather-data span{
     margin: 0.6rem;
 }
 
@@ -76,6 +85,11 @@ body {
     height: 20px;
 }
 
+
+#description{
+  font-weight: bold;
+  text-transform: capitalize;
+}
 #description-container{
     display: flex;
     justify-content: center;
@@ -89,7 +103,7 @@ body {
     align-items: center;
     
 }
-.details-container #umidity{
+.details-container #humidity{
     border-right: 1px solid #fff;
     margin: 0.6rem;
     padding: 0.6rem;
