--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body {
   padding: 2rem;
   color: #fff;
   border-radius: 1rem;
+  min-width: 230px;
+  max-width: 800px;
+  margin: auto;
 }
 
 /* Form */
